c2rust-refactor/tests/snapshots/snapshots__refactor-rewrite_expr-multi_rewrite.rs-1-2.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor rewrite_expr 1 2 --rewrite-mode alongside -- tests/snapshots/multi_rewrite.rs --edition 2021
---
fn main() {
    let x = 2;
}
