c2rust-refactor/tests/snapshots/snapshots__refactor-struct_merge_updates.rs.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor struct_merge_updates --rewrite-mode alongside -- tests/snapshots/struct_merge_updates.rs --edition 2021
---
struct S {
    x: u32,
    y: u32,
    z: u32,
}

fn main() {
    let mut s = S { x: 0, y: 0, z: 0 };

    s = S {
        x: 1,
        y: 2,
        z: 3,
        ..s
    };

    let mut s2 = S { x: 0, y: 0, z: 0 };

    s2 = S {
        x: 1,
        y: 2,
        x: 1,
        ..s2
    };
}
