c2rust-refactor/tests/snapshots/snapshots__refactor-test_one_plus_one-collapse_cfg_attr.rs.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor test_one_plus_one --rewrite-mode alongside -- tests/snapshots/collapse_cfg_attr.rs --edition 2021
---
// Test restoration of #[cfg_attr] during macro collapsing.  Both mods' attrs should be passed
// through unmodified.

#[cfg_attr(all(), allow(warnings))]
mod a {}

#[cfg_attr(any(), allow(warnings))]
mod b {}

fn main() {
    // Need something to rewrite, otherwise `-r alongside` won't actually produce the new file.
    let x = 1 + 1;
}
