c2rust-refactor/tests/snapshots/snapshots__refactor-uninit_to_default.rs.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor uninit_to_default --rewrite-mode alongside -- tests/snapshots/uninit_to_default.rs --edition 2021
---
use std::mem::{self, uninitialized};
fn main() {
    unsafe {
        let x: i32 = 0i32;
        let y: char = '\u{0}';
        let z: bool = false;
        let x: i32 = 7;
        let x: i32;
        let x: i32 = f();
    }
}

fn f() -> i32 {
    17
}
